# models/dao/auth_config.go
@@ -1,14 +1,6 @@
 package dao
 
 type AuthConfig struct {
-	Id         string           `bson:"_id,omitempty"`
-	Type       string           `bson:"type,omitempty"`
-	AuthConfig CreateAuthConfig `bson:"authConfig,omitempty"`
-	CreatedOn  int64            `bson:"createdOn"`
-	UpdatedOn  int64            `bson:"updatedOn"`
-}
-
-type CreateAuthConfig struct {
 	Endpoint        string          `bson:"endpoint"`
 	Headers         []string        `bson:"headers"`
 	RequestMethod   string          `bson:"requestMethod"`
