# models/dao/service_config.go
@@ -1,0 +1,8 @@
+package dao
+
+type ServiceConfig struct {
+	Endpoint      string   `bson:"endpoint"`
+	Regex         string   `bson:"regex"`
+	Authorization bool     `bson:"authorization"`
+	Roles         []string `bson:"roles"`
+}
